[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/SceneBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TaskScene.gd" type="Script" id=2]
[ext_resource path="res://assets/img/btn-close.png" type="Texture" id=3]
[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/img/btn-close-pressed.png" type="Texture" id=5]
[ext_resource path="res://components/CountdownTimer.tscn" type="PackedScene" id=6]

[node name="TaskScene" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Control" parent="CanvasLayer" index="0"]
focus_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -4.0
custom_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer" index="0"]
unique_name_in_owner = true
margin_right = 944.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
text = "TITLE"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer" index="1"]
margin_top = 80.0
margin_right = 944.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer/ScrollContainer" index="0"]
unique_name_in_owner = true
margin_right = 944.0
margin_bottom = 326.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Description of the task!!!"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" index="2"]
margin_top = 436.0
margin_right = 944.0
margin_bottom = 556.0
alignment = 1

[node name="CountdownTimer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 6 )]
margin_right = 944.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 60 )

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/Control" index="1"]
margin_right = 56.0
margin_bottom = 52.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_ExitButton_pressed"]
